# TG-Bot-DeepSeek-Integration

./: .env.example  .gitignore  README.md  bot.py  config.py  database.py  deepseek_api.py  keyboards.py  models.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
legal_bot/: __init__.py  __main__.py  bot.py  config.py  database.py  deepseek_api.py  keyboards.py  models.py  utils.py
tests/: conftest.py  test_keyboards.py  test_package.py  test_utils.py
