[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-bot"
version = "1.0.0"
description = "Telegram bot offering on-demand legal consultations backed by DeepSeek, with paid questions and unlimited subscriptions via YooKassa"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Valery Gorbanev" },
]
keywords = ["telegram", "bot", "deepseek", "yookassa", "legal-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "python-telegram-bot==20.7",
    "openai==1.12.0",
    "python-dotenv==1.0.0",
    "sqlalchemy>=2.0.30",
    "qrcode>=7.4.2",
    "Pillow>=10.0.0",
    "python-docx>=1.1.2",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.3",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
legal-bot = "legal_bot.bot:main"

[project.urls]
Homepage = "https://github.com/valerygorbanev/TG-Bot-DeepSeek-Integration"
Repository = "https://github.com/valerygorbanev/TG-Bot-DeepSeek-Integration"
Issues = "https://github.com/valerygorbanev/TG-Bot-DeepSeek-Integration/issues"

[tool.setuptools.packages.find]
include = ["legal_bot*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",
    "E712",
    "B008",
    "B904",
]

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
